picture only on index, code wrap fix with horizontal scroll

--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,10 @@
+html{
+  height: 100%;
+}
+
+
 body {
+  height: 70%;
   margin: 0 auto;
   font-size: 18px;
   color: #333;
@@ -35,6 +41,11 @@ a:visited {
   width: 700px;
   margin-left: auto;
   margin-right: auto;
+}
+
+
+#main {
+  min-height: 100%;
 }
 
 footer {
